Fix: Wrong size of virtual scroller in datatable. Fix: scrollposition jumps to top if data is lazy fetched. Fix: in case of reload, scroll position does not jump to selected row.

--- a/src/main/components/table/UITable.scss
+++ b/src/main/components/table/UITable.scss
@@ -316,9 +316,9 @@
     .p-datatable-wrapper {
         height: calc(100% - 1px);
 
-        // .p-virtualscroller {
-        //     height: 100% !important;
-        // }
+        .p-virtualscroller {
+            height: 100% !important;
+        }
     }
 
     &.p-datatable-scrollable .p-datatable-wrapper:has(.p-virtualscroller) {
